modificados:     .gitmodules 	modificados:     custfiles/etc/lightdm/background.png 	modificados:     custfiles/etc/lightdm/lightdm-mini-greeter.conf 	borrados:        custfiles/usr/share/backgrounds/shigaraki.jpg 	modificados:     isobuilder.sh 	modificados:     isomakefiles/grub/grub.cfg 	nuevos archivos: isomakefiles/grub/themes 	borrados:        isomakefiles/syslinux/splash.png 	modificados:     skel/.config/i3/config 	custfiles/usr/share/backgrounds/ 	customrepo/packages.x86_64 	isomakefiles/grub/fonts/ 	isomakefiles/syslinux/

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "custfiles/usr/share/oh-my-zsh"]
 	path = custfiles/usr/share/oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
+[submodule "isomakefiles/grub/themes/balam-grub"]
+	path = isomakefiles/grub/themes/balam-grub
+	url = https://github.com/BiCH0/balam-grub
