--- a/custfiles/etc/lightdm/lightdm-mini-greeter.conf
+++ b/custfiles/etc/lightdm/lightdm-mini-greeter.conf
@@ -41,7 +41,7 @@ suspend-key = u
 # RGB color(`rgb(r,g,b)`) are all acceptable formats.
 
 # The font to use for all text
-font = "Sans"
+font = "Hack"
 # The font size to use for all text
 font-size = 1em
 # The font weight to use for all text
@@ -49,9 +49,9 @@ font-weight = bold
 # The font style to use for all text
 font-style = normal
 # The default text color
-text-color = "#080800"
+text-color = "#D13333"
 # The color of the error text
-error-color = "#F8F8F0"
+error-color = "#FFFF30"
 # An absolute path to an optional background image.
 # The image will be displayed centered & unscaled.
 # Note: The file should be somewhere that LightDM has permissions to read
@@ -62,7 +62,7 @@ background-color = "#1B1D1E"
 # The password window's background color
 window-color = "#161616"
 # The color of the password window's border
-border-color = "#d13333"
+border-color = "#D13333"
 # The width of the password window's border.
 # A trailing `px` is required.
 border-width = 2px
@@ -75,12 +75,12 @@ layout-space = 15
 # type your password.
 password-character = -1
 # The color of the text in the password input.
-password-color = "#F8F8F0"
+password-color = "#D13333"
 # The background color of the password input.
 password-background-color = "#1B1D1E"
 # The color of the password input's border.
 # Falls back to `border-color` if missing.
-password-border-color = "#080800"
+password-border-color = "#E6E6E6"
 # The width of the password input's border.
 # Falls back to `border-width` if missing.
 password-border-width = 2px
