--- a/isomakefiles/grub/grub.cfg
+++ b/isomakefiles/grub/grub.cfg
@@ -8,12 +8,56 @@ insmod ntfscomp
 insmod exfat
 insmod udf
 
-# Use graphics-mode output
-if loadfont "${prefix}/fonts/unicode.pf2" ; then
+function load_video {
+  if [ x$feature_all_video_module = xy ]; then
     insmod all_video
-    set gfxmode="auto"
-    terminal_input console
-    terminal_output console
+  else
+    insmod efi_gop
+    insmod efi_uga
+    insmod ieee1275_fb
+    insmod vbe
+    insmod vga
+    insmod video_bochs
+    insmod video_cirrus
+  fi
+}
+
+# Use colors
+set menu_color_normal=light-red/black
+set menu_color_highlight=black/red
+
+
+# Use graphics-mode output
+if loadfont ($root)/boot/grub/fonts/unicode.pf2 ; then
+    set gfxmode=auto
+    load_video
+    insmod gfxterm
+    set locale_dir=$prefix/locale
+    set lang=en_US
+    insmod gettext
+fi
+
+terminal_input console
+terminal_output gfxterm
+insmod part_gpt
+insmod ext2
+insmod gfxmenu
+set theme_path=($root)/boot/grub/themes/balam-grub
+loadfont $theme_path/terminus-14.pf2
+loadfont $theme_path/terminus-16.pf2
+loadfont $theme_path/DejaVuSans-Regular-14.pf2
+loadfont $theme_path/DejaVuSans-48.pf2
+insmod png
+set theme=$theme_path/theme.txt
+export theme
+
+if [ x$feature_timeout_style = xy ] ; then
+  set timeout_style=menu
+  set timeout=5
+# Fallback normal timeout code in case the timeout_style feature is
+# unavailable.
+else
+  set timeout=5
 fi
 
 # Enable serial console
@@ -53,20 +97,20 @@ else
 fi
 
 # Set default menu entry
-default=archlinux
+default=balamos
 timeout=15
 timeout_style=menu
 
 
 # Menu entries
 
-menuentry "BalamOs install medium (%ARCH%, ${archiso_platform})" --class arch --class gnu-linux --class gnu --class os --id 'archlinux' {
+menuentry "BalamOs install medium (%ARCH%, ${archiso_platform})" --class balam --class arch --class gnu-linux --class gnu --class os --id 'balamos' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID}
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
-menuentry "BalamOs install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'archlinux-accessibility' {
+menuentry "BalamOs install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class balam --class arch --class gnu-linux --class gnu --class os --id 'balamos-accessibility' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} accessibility=on
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
@@ -96,7 +140,7 @@ if [ "${grub_platform}" == 'efi' ]; then
         }
     fi
 
-    menuentry 'UEFI Firmware Settings' --id 'uefi-firmware' {
+    menuentry 'UEFI Firmware Settings' --id 'uefi-firmware' --class settings {
         fwsetup
     }
 fi
