--- a/.gitmodules
+++ b/.gitmodules
@@ -6,4 +6,4 @@
 	url = https://github.com/ohmyzsh/ohmyzsh.git
 [submodule "isomakefiles/grub/themes/balam-grub"]
 	path = isomakefiles/grub/themes/balam-grub
-	url = https://github.com/BiCH0/balam-grub
+	url = https://github.com/BiCH0/balam-grub.git
