Updated balam logo, added firefox preset and minor fixes

--- a/skel/.config/polybar/config.ini
+++ b/skel/.config/polybar/config.ini
@@ -107,6 +107,9 @@ label-visible = %index%
 label-visible-padding = 1
 label-visible-background = ${colors.bg}
 
+format=<label-state><label-mode>
+label-mode-background= ${colors.bg}
+
 [module/xwindow]
 inherit = rounded
 type = internal/xwindow
