--- a/skel/.config/polybar/config.ini
+++ b/skel/.config/polybar/config.ini
@@ -69,8 +69,8 @@ modules-right = rl2 rl n vpn-network wired-network wireless-network n
 
 [bar/primary-uni]
 inherit = section/base
-modules-left = n rofi n memory filesystem rr rr2
-modules-center = rl2 rl n xwindow sep i3 n rr rr2
+modules-left = n rofi n memory filesystem battery rr rr2
+modules-center = rl2 rl xwindow sep i3 n rr rr2
 modules-right = rl2 rl n vpn-network wired-network wireless-network sep date sep pulseaudio n usb tray n
 
 [bar/secondary]
@@ -113,39 +113,40 @@ label-mode-background= ${colors.bg}
 [module/xwindow]
 inherit = rounded
 type = internal/xwindow
-label = %{T1}%title:0:60:...%%{T-}
+label = %{T1}%title:0:20:...%%{T-}
 
 [module/filesystem]
 type = internal/fs
 interval = 25
 mount-0 = /
-label-mounted-padding = 1
+label-mounted-padding = 0
 label-mounted-background = ${colors.bg}
-label-mounted = %mountpoint%%{F-} %percentage_used%%
+label-mounted = "%mountpoint%%{F-} %percentage_used%% "
 label-mounted-foreground = ${colors.primary}
-label-unmounted = %mountpoint% not mounted
+label-unmounted = "%mountpoint% 󱙀 "
 label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
 format-volume-background = ${colors.bg}
-format-volume-padding = 1
-format-volume-prefix = " "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
-
+format-volume-padding = 0
+ramp-volume-foreground = ${colors.primary}
+format-volume = <ramp-volume> <label-volume>
 label-volume = %percentage%%
-
-label-muted = ""
+ramp-volume-0 = "%{T2}%{T-}"
+ramp-volume-1 = "%{T2}%{T-}"
+ramp-volume-2 = "%{T2}%{T-}"
+label-muted = "%{T2}%{T-}"
 label-muted-foreground = ${colors.disabled}
 label-muted-background = ${colors.bg}
-label-muted-padding = 1
+label-muted-padding = 0
+click-right = pavucontrol
 
 [module/memory]
 inherit = rounded
 type = internal/memory
 interval = 2
-format-prefix = "RAM"
+format-prefix = "%{T2}%{T-}"
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
@@ -188,7 +189,7 @@ label-connected = "%{T2}󰖩%{T-} %local_ip%"
 [module/date]
 inherit = rounded
 type = internal/date
-interval = 1
+interval = 0
 date = %H:%M
 date-alt = "%H:%M:%S %d/%m/%Y"
 label = %date%
@@ -199,43 +200,25 @@ type = internal/battery
 low-at = 20
 battery = BAT0
 adapter = ADP1
-format-charging = <label-charging> %{T2}%{T-}
+label-padding = 1
+format-charging = "%{T2}%{T-}"
+format-charging-foreground = ${colors.primary}
+format-charging-background = ${colors.bg}
 format-discharging = <ramp-capacity> <label-discharging>
-label-charging = %percentage%%
-label-discharging = %percentage%%
-label-full = %{T2}%{T-}
-label-low = %percentage%% %{T2}%{T-}
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-; Only applies if <bar-capacity> is used
-bar-capacity-width = 10
-
-; Only applies if <animation-charging> is used
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-; Framerate in milliseconds
-animation-charging-framerate = 750
-
-; Only applies if <animation-discharging> is used
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-3 = 
-animation-discharging-4 = 
-; Framerate in milliseconds
-animation-discharging-framerate = 500
-
-; Only applies if <animation-low> is used
-; New in version 3.6.0
-animation-low-0 = !
-animation-low-1 =
+label-discharging = "%percentage%% "
+ramp-capacity-foreground = ${colors.primary}
+format-discharging-background = ${colors.bg}
+label-full = %{T2}%{T-}
+label-low = %percentage%% %{T2}%{T-}
+label-low-foreground = ${colors.fg}
+label-low-background = ${colors.primary}
+ramp-capacity-0 = %{T2}%{T-}
+ramp-capacity-1 = %{T2}%{T-}
+ramp-capacity-2 = %{T2}%{T-}
+ramp-capacity-3 = %{T2}%{T-}
+ramp-capacity-4 = %{T2}%{T-}
+animation-low-0 = %{T2}%{T-}
+animation-low-1 = %{T2}%{T-}
 animation-low-framerate = 200
 
 [module/jgmenu]
