--- a/isomakefiles/grub/grub.cfg
+++ b/isomakefiles/grub/grub.cfg
@@ -106,13 +106,13 @@ timeout_style=menu
 menuentry "BalamOs install medium (%ARCH%, ${archiso_platform})" --class balam --class arch --class gnu-linux --class gnu --class os --id 'balamos' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux cow_spacesize=8G archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID}
-    initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
+    initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
 menuentry "BalamOs install medium with speakup screen reader (%ARCH%, ${archiso_platform})" --hotkey s --class balam --class arch --class gnu-linux --class gnu --class os --id 'balamos-accessibility' {
     set gfxpayload=keep
     linux /%INSTALL_DIR%/boot/%ARCH%/vmlinuz-linux cow_spacesize=8G archisobasedir=%INSTALL_DIR% archisodevice=UUID=${ARCHISO_UUID} accessibility=on
-    initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
+    initrd /%INSTALL_DIR%/boot/%ARCH%/initramfs-linux.img
 }
 
 
