--- a/isomakefiles/syslinux/archiso_sys-linux.cfg
+++ b/isomakefiles/syslinux/archiso_sys-linux.cfg
@@ -5,7 +5,7 @@ It allows you to install BalamOs or perform system maintenance.
 ENDTEXT
 MENU LABEL BalamOs install medium (x86_64, BIOS)
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
-INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archisodevice=UUID=%ARCHISO_UUID% cow_spacesize=8G
 
 # Accessibility boot option
@@ -16,5 +16,5 @@ It allows you to install BalamOs or perform system maintenance with speech feedb
 ENDTEXT
 MENU LABEL BalamOs install medium (x86_64, BIOS) with ^speech
 LINUX /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
-INITRD /%INSTALL_DIR%/boot/intel-ucode.img,/%INSTALL_DIR%/boot/amd-ucode.img,/%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
+INITRD /%INSTALL_DIR%/boot/x86_64/initramfs-linux.img
 APPEND archisobasedir=%INSTALL_DIR% archisodevice=UUID=%ARCHISO_UUID% accessibility=on cow_spacesize=8G
