Added terminus font

--- a/isomakefiles/grub/grub.cfg
+++ b/isomakefiles/grub/grub.cfg
@@ -27,7 +27,7 @@ set menu_color_normal=light-red/black
 set menu_color_highlight=black/red
 
 # Use graphics-mode output
-if loadfont ($root)/boot/grub/fonts/unicode.pf2 ; then
+if loadfont "${prefix}/fonts/unicode.pf2" ; then
     set gfxmode=auto
     load_video
     insmod gfxterm
