--- a/skel/.config/polybar/config.ini
+++ b/skel/.config/polybar/config.ini
@@ -69,7 +69,7 @@ modules-right = rl2 rl n vpn-network wired-network wireless-network n
 
 [bar/primary-uni]
 inherit = section/base
-modules-left = n rofi n memory filesystem battery rr rr2
+modules-left = n rofi sep memory filesystem battery rr rr2
 modules-center = rl2 rl xwindow sep i3 n rr rr2
 modules-right = rl2 rl n vpn-network wired-network wireless-network sep date sep pulseaudio n usb tray n
 
@@ -107,6 +107,10 @@ label-visible = %index%
 label-visible-padding = 1
 label-visible-background = ${colors.bg}
 
+label-urgent = %index%!
+label-urgent-foreground = ${colors.bg}
+label-urgent-background = ${colors.fg}
+
 format=<label-state><label-mode>
 label-mode-background= ${colors.bg}
 
@@ -119,11 +123,11 @@ label = %{T1}%title:0:20:...%%{T-}
 type = internal/fs
 interval = 25
 mount-0 = /
-label-mounted-padding = 0
+label-mounted-padding = 1
 label-mounted-background = ${colors.bg}
 label-mounted = "%mountpoint%%{F-} %percentage_used%% "
 label-mounted-foreground = ${colors.primary}
-label-unmounted = "%mountpoint% 󱙀 "
+label-unmounted = "%mountpoint% 󱙀  "
 label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
@@ -146,9 +150,10 @@ click-right = pavucontrol
 inherit = rounded
 type = internal/memory
 interval = 2
-format-prefix = "%{T2}%{T-}"
+format-prefix = "%{T2}%{T-} "
 format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+label = "%percentage_used:2%% "
+label-padding = 0
 
 [module/cpu]
 inherit = rounded
@@ -189,7 +194,7 @@ label-connected = "%{T2}󰖩%{T-} %local_ip%"
 [module/date]
 inherit = rounded
 type = internal/date
-interval = 0
+interval = 1.0
 date = %H:%M
 date-alt = "%H:%M:%S %d/%m/%Y"
 label = %date%
@@ -201,7 +206,7 @@ low-at = 20
 battery = BAT0
 adapter = ADP1
 label-padding = 1
-format-charging = "%{T2}%{T-}"
+format-charging = "%{T2} %{T-}"
 format-charging-foreground = ${colors.primary}
 format-charging-background = ${colors.bg}
 format-discharging = <ramp-capacity> <label-discharging>
@@ -209,9 +214,11 @@ label-discharging = "%percentage%% "
 ramp-capacity-foreground = ${colors.primary}
 format-discharging-background = ${colors.bg}
 label-full = %{T2}%{T-}
+label-full-foreground = ${colors.primary}
+label-full-background = ${colors.bg}
 label-low = %percentage%% %{T2}%{T-}
 label-low-foreground = ${colors.fg}
-label-low-background = ${colors.primary}
+label-low-background = ${colors.bg}
 ramp-capacity-0 = %{T2}%{T-}
 ramp-capacity-1 = %{T2}%{T-}
 ramp-capacity-2 = %{T2}%{T-}
@@ -233,7 +240,7 @@ inherit = rounded
 type = custom/text
 format-foreground = ${colors.primary}
 format-background = ${colors.bg}
-format = %{T2}%{A1:rofi -show drun -modes drun -show-icons:}%{A3:~/.config/rofi/powermenu/powermenu.sh:}%{A}%{A}%{T-}
+format = "%{T2}%{A1:rofi -show drun -modes drun -show-icons:}%{A3:~/.config/rofi/powermenu/powermenu.sh:}%{A}%{A}%{T-}"
 
 [module/dunst]
 inherit = rounded
